# plthook-rust

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: list-symbols.rs  replace-atoi.rs
src/: errors.rs  ffi.rs  lib.rs  symbols.rs  tests.rs
