[package]
name = "plthook"
version = "0.1.0"
edition = "2018"
authors = [ "ayosec <ayosec@gmail.com" ]
description = "Bindings for the plthook library"
documentation = "https://docs.rs/plthook"
readme = "README.md"
homepage = "https://github.com/ayosec/plthook-rust"
repository = "https://github.com/ayosec/plthook-rust.git"
license = "Apache-2.0"

exclude = [
    ".github/**",
    "vendor/*.sh",
]

[dependencies]
libc = "0.2.98"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
lazy_static = "1"
